--- a/frontend/app/app/templates/edit_intervention.html
+++ b/frontend/app/app/templates/edit_intervention.html
@@ -1,72 +1,71 @@
-<div ng-controller="InterventionController">
-    <div class="card shadow mb-4">
-        <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Modifier une interventions</h6>
+<md-dialog aria-label="Planifier une interventions" ng-controller="InterventionController" flex="80">
+    <md-toolbar>
+        <div class="md-toolbar-tools">
+            <h2>Planifier une intervention</h2>
+            <span flex></span>
+            <md-button class="md-icon-button" ng-click="cancel()">
+                <md-icon aria-label="Close dialog">X</md-icon>
+            </md-button>
         </div>
-        <div class="card-body">
-            <form ng-submit="editIntervention()">
+    </md-toolbar>
+    <form>
+        <md-dialog-content>
+            <div class="card-body">
                 <div class="form-group">
                     <md-input-container class="md-block">
                         <label>Titre</label>
-                        <input type="text" placeholder="Libellé" ng-model="editintervention.title" ng-required="true" />
+                        <input type="text" placeholder="Libellé" ng-model="intervention.title"
+                            value="intervention.title" />
                     </md-input-container>
                 </div>
-
                 <div class="form-group">
                     <md-input-container class="md-block">
                         <label>Description</label>
-                        <input type="text" placeholder="Description" ng-model="editintervention.description"
-                            ng-required="true" />
+                        <input type="text" placeholder="Description" ng-model="intervention.description" />
                     </md-input-container>
                 </div>
-
                 <div class="form-group">
                     <md-input-container class="md-block">
                         <label>Date de début</label>
-                        <md-datepicker ng-model="dateStart" md-placeholder="Entrer une date de début"
-                            ng-required="true">
+                        <md-datepicker ng-model="intervention.date_start" md-placeholder="">
                         </md-datepicker>
                     </md-input-container>
-                    <div uib-timepicker ng-model="timeStart" hour-step="1" minute-step="30" show-meridian="ismeridian"
-                        display-format="HH:mm" ng-required="true">
-                    </div>
                 </div>
-
                 <div class="form-group">
                     <md-input-container class="md-block">
                         <label>Date de fin</label>
-                        <md-datepicker ng-model="dateEnd" md-placeholder="Entrer une date de fin" ng-required="true">
+                        <md-datepicker ng-model="intervention.date_end" md-placeholder="">
                         </md-datepicker>
                     </md-input-container>
-                    <div uib-timepicker ng-model="timeEnd" hour-step="1" minute-step="30" show-meridian="ismeridian"
-                        display-format="HH:mm:ss" ng-required="true">
-                    </div>
                 </div>
-
                 <div class="form-group">
                     <md-input-container class="md-block">
                         <label>Intervenant</label>
-                        <md-select ng-model="editintervention.collaborator_id" ng-required="true">
+                        <input type="text" placeholder="Intervenant" ng-model="intervention.collaborator" />
+                        <!--<md-select ng-model="intervention.collaborator_id" ng-required="true">
                             <md-option ng-value="collaborator.id" ng-repeat="collaborator in collaborators">
                                 {{ collaborator.company }}
                             </md-option>
-                        </md-select>
+                        </md-select>-->
                     </md-input-container>
                 </div>
-
                 <div class="form-group">
                     <md-input-container class="md-block">
                         <label>Lieu</label>
-                        <md-select ng-model="editintervention.location_id" ng-required="true">
+                        <input type="text" placeholder="Lieu" ng-model="intervention.location" />
+                        <!--<md-select ng-model="intervention.location_id" ng-required="true">
                             <md-option ng-value="location.id" ng-repeat="location in locations">
                                 {{ location.name }}
                             </md-option>
-                        </md-select>
+                        </md-select>-->
                     </md-input-container>
                 </div>
-                <input type="submit" value="Modifier" class="btn btn-sm btn-success">
-
-        </div>
-        </form>
-    </div>
-</div>
+            </div>
+        </md-dialog-content>
+        <md-dialog-actions layout="row">
+            <button ng-click="answer(intervention)" class="btn btn-sm btn-success">
+                Planifier
+            </button>
+        </md-dialog-actions>
+    </form>
+</md-dialog>
