--- a/frontend/app/assets/css/style.css
+++ b/frontend/app/assets/css/style.css
@@ -68,3 +68,17 @@
   .dialogdemoBasicUsage .dialog-demo-prerendered md-checkbox {
     margin-bottom: 0;
   }
+
+  .status{
+    padding: 7px;
+    border-radius: 20px;
+    text-align: center;
+  }
+
+  .disabled{
+    pointer-events: none;
+  }
+
+  .date-width{
+    width:130px ;
+  }
