Resolve status issue

--- a/frontend/app/app/templates/edit_intervention.html
+++ b/frontend/app/app/templates/edit_intervention.html
@@ -16,6 +16,8 @@
                         <label>Titre</label>
                         <input type="text" placeholder="Libellé" ng-model="intervention.title"
                             value="intervention.title" />
+                        <input type="hidden" ng-model="intervention.id"
+                            value="intervention.id" />
                     </md-input-container>
                 </div>
                 <div class="form-group">
